--- a/css/queries.css
+++ b/css/queries.css
@@ -112,7 +112,7 @@
   .main-nav {
     background-color: rgba(255, 255, 255, 0.9);
     -webkit-backdrop-filter: blur(5px);
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(20px);
     position: absolute;
     top: 0;
     left: 0;
@@ -142,10 +142,10 @@
     transform: translateX(0);
   }
 
-  .nav-open .icon-mobile-nav[name="close-outline"] {
+  .nav-open .icon-mobile-nav[name='close-outline'] {
     display: block;
   }
-  .nav-open .icon-mobile-nav[name="menu-outline"] {
+  .nav-open .icon-mobile-nav[name='menu-outline'] {
     display: none;
   }
 
